# rf-control

./: .gitignore  LICENSE  README.md  control.proto  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: release.yml
client/: client.go  eeprom.go  transport.go  whalepod.go
controlpb/: control.pb.go
docs/firmware/: README.md
docs/whalepod/: README.md  draw_rf_cable_map.py  rf_cable_map.csv
examples/black_canyon/: basic_sequence.py
examples/straps/: basic_sequence.py  run_config.py  set_rf_band.py
examples/straps/configs/: RF_BAND_10_900MHZ.json  RF_BAND_1800_2700MHZ.json  RF_BAND_2700_3600MHZ.json  RF_BAND_3600_4500MHZ.json  RF_BAND_900_1800MHZ.json
examples/whalepod/: README.md  basic_sequence.py  main.go
firmware/: README.md  whalepod.uf2
internal/controlpb/: control.pb.go
proto/: black_canyon.proto  straps.proto  whalepod.proto
scripts/: regen_proto.py
src/ocupoint_rf/: __init__.py  _base.py  black_canyon.py  straps.py  transport.py  whalepod.py
src/ocupoint_rf/_generated/: black_canyon_pb2.py  straps_pb2.py  whalepod_pb2.py
test_data/: README.md
test_data/black_canyon/: README.md
test_data/straps/: README.md
test_data/whalepod/: README.md
