[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ocupoint-rf-control"
version = "0.1.0"
description = "Python client library for Ocupoint Ethernet-controlled RF frontends (Black Canyon, Straps, …)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ocupoint" }]
dependencies = [
    "protobuf>=4.25",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ocupoint_rf._generated" = ["*.py"]
